updated header, corrected text alignment

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ font-family: 'Source Code Pro', monospace; */
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', sans-serif;
-    text-align: left;
 }
 
 #wrapper {
@@ -101,7 +100,7 @@ a:hover {
 #header h1 {
     font-family: 'Source Code Pro', monospace;
     font-weight: 300;
-    margin-bottom: 5px;
+    margin-bottom: 12px;
 }
 
 #header h2 {
@@ -111,8 +110,14 @@ a:hover {
     font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 }
 
+#jumbotron {
+    font-size: 1.4rem;
+    margin: 100px 0;
+    text-align: left;
+}
+
 #languages {
-    margin: 15px 0 25px;
+    margin: 25px 0;
 }
 
 #languages i, footer i {
@@ -176,6 +181,7 @@ a:hover {
     border-radius: 5px;
     opacity: 0.8;
     z-index: 100;
+    text-align: center;
 }
 
 .arrow-background-prev {
@@ -230,7 +236,7 @@ figure img {
     top: 300px;
     background-color:white;
     color: black;
-    padding: 7px 0;
+    padding: 7px;
     opacity: 0.9;
 }
 
@@ -257,6 +263,10 @@ figure img {
     height: 500px;
 }
 
+#contact-form {
+    text-align:center;
+}
+
 #contact-form input, textarea {
     background: white;
     display:block;
@@ -273,7 +283,7 @@ figure img {
 
 #contact-form button {
     padding: 10px 30px;
-    margin-bottom: 45px;
+    margin: 25px auto 45px;
     border-radius: 5px;
     border: none;
     background-color:rgb(0, 190, 248);
@@ -283,8 +293,12 @@ figure img {
 
 #contact-form button:active {
     transition: All 250ms ease;
-    position: relative;
+    /* position: relative; */
     top: 3px;
+}
+
+#contact p {
+    text-align: center;
 }
 
 /* FOOTER */
